src/objects/Moves_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Moves Data</relationshipLabel>
        <relationshipName>Moves_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Time__c</fullName>
        <label>Active Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BG_Calories__c</fullName>
        <label>BG Calories</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMR_Day__c</fullName>
        <label>BMR Day</label>
        <precision>13</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calories__c</fullName>
        <label>Calories</label>
        <precision>14</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_BMR__c</fullName>
        <label>Estimated BMR</label>
        <precision>13</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inactive_Time__c</fullName>
        <label>Inactive Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longest_Active_Time__c</fullName>
        <label>Longest Active Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longest_Idle_Time__c</fullName>
        <label>Longest Idle Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steps__c</fullName>
        <label>Steps</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunrise__c</fullName>
        <label>Sunrise</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sunset__c</fullName>
        <label>Sunset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Completed__c</fullName>
        <label>Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Created__c</fullName>
        <label>Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Updated__c</fullName>
        <label>Time Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workout_Active_Time__c</fullName>
        <label>Workout Active Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workout_Calories__c</fullName>
        <label>Workout Calories</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workout_Count__c</fullName>
        <label>Workout Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workout_Longest_Time__c</fullName>
        <label>Workout Longest Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workout_Time__c</fullName>
        <label>Workout Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Moves Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Date__c</columns>
        <columns>Active_Time__c</columns>
        <columns>Calories__c</columns>
        <columns>Distance__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record XID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Moves Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>